--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,31 @@
-asttokens==3.0.0
 beautifulsoup4==4.12.3
+blinker==1.9.0
 branca==0.8.1
-certifi==2024.12.14
+certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
-comm==0.2.2
-debugpy==1.8.11
-decorator==5.1.1
-executing==2.1.0
+Flask==3.1.0
 folium==0.19.4
 geopandas==1.0.1
 idna==3.10
-ipykernel==6.29.5
-ipython==8.31.0
-jedi==0.19.2
+itsdangerous==2.2.0
 Jinja2==3.1.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
 MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-nest-asyncio==1.6.0
-numpy==2.2.1
-opencv-python==4.10.0.84
+numpy==2.2.2
 packaging==24.2
 pandas==2.2.3
-parso==0.8.4
-pillow==11.1.0
-platformdirs==4.3.6
-prompt_toolkit==3.0.48
-psutil==6.1.1
-pure_eval==0.2.3
-Pygments==2.19.1
 pyogrio==0.10.0
 pyproj==3.7.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-pytz==2024.2
-pywin32==308
-pyzmq==26.2.0
+pytz==2025.1
 requests==2.32.3
 schedule==1.2.2
-shapely==2.0.6
+shapely==2.0.7
 six==1.17.0
 soupsieve==2.6
-stack-data==0.6.3
-tornado==6.4.2
-traitlets==5.14.3
-tzdata==2024.2
+tzdata==2025.1
 urllib3==2.3.0
-wcwidth==0.2.13
-xyzservices==2024.9.0
+Werkzeug==3.1.3
+xyzservices==2025.1.0
